Probably the first "operational" version, somewhat tested. Contains a number of utils that should be moved out of the playground.
git-svn-id: file:///srv/local/data/cleanRepo/trunk@33538 a0517364-e873-4167-b1c8-416daa5a6b91